Prepared html for internationalisation

--- a/appdev_project2/src/main/resources/messages.properties
+++ b/appdev_project2/src/main/resources/messages.properties
@@ -1,9 +1,50 @@
-newbid.bidValue=Bid Value
+header.home=Home
+header.jobAds=Job Advertisements
+header.hello=Hello
+header.logout=Log Out
+header.search=Search
+header.keyword=Job Name
+
+account.email=Email
+account.name=Name
+account.phoneNumber=Phone Number
+account.job=Job
+account.date=Date
+account.addJob=Add Job
+
+job.name=Job Name
+job.description=Job Description
+job.date=Job Added On
+job.view=View
+job.owner=Owner
+job.active=Active
+
+doesnotexist.message=Does not exist
+doesnotexist.back=Back to Home
+
+bid.value=Value \u20AC
+
+newbid.submit=Bid
 newbid.valueError=Bid too high or < 0
 
+login.message=Please Sign-In
+login.email=Email
+login.password=Password
+login.submit=Sign-In
+login.newAccount=New Account
+
+register.message=Enter your details
 register.name=Name
 register.surname=Surname
 register.email=Email
 register.phoneNumber=Phone Number
 register.password=Password
-register.register=Register
+register.submit=Register
+
+users.email=Email
+users.name=Name
+users.surname=Surname
+users.phoneNumber=Phone Number
+
+
+
