PL names translated

--- a/appdev_project2/src/main/resources/messages_PL.properties
+++ b/appdev_project2/src/main/resources/messages_PL.properties
@@ -1,47 +1,47 @@
-header.home=Home
-header.jobAds=Job Advertisements
-header.hello=Hello
-header.logout=Log Out
-header.search=Search
-header.keyword=Job Name
+header.home=Strona G\u0142ówna
+header.jobAds=Og\u0142oszenia Pracy
+header.hello=Witaj
+header.logout=Wyloguj
+header.search=Szukaj
+header.keyword=Nazwa
 
 account.email=Email
-account.name=Name
-account.phoneNumber=Phone Number
-account.job=Job
-account.date=Date
-account.addJob=Add Job
+account.name=Imi\u0119
+account.phoneNumber=Numer telefonu
+account.job=Praca
+account.date=Data
+account.addJob=Dodaj now\u0105 prac\u0119
 
-job.name=Job Name
-job.description=Job Description
-job.date=Job Added On
-job.view=View
-job.owner=Owner
-job.active=Active
+job.name=Nazwa
+job.description=Opis
+job.date=Data dodania
+job.view=Zobacz
+job.owner=W\u0142a\u015Bciciel
+job.active=Aktywna
 
-doesnotexist.message=Does not exist
-doesnotexist.back=Back to Home
+doesnotexist.message=Nie istnieje
+doesnotexist.back=Powrót do strony g\u0142ównej
 
-bid.value=Value \u20AC
+bid.value=Cena \u20AC
 
-newbid.submit=Bid
-newbid.valueError=Bid too high or < 0
+newbid.submit=Oferta
+newbid.valueError=Oferta zbyt wysoka lub < 0
 
-login.message=Please Sign-In
+login.message=Prosz\u0119 si\u0119 zalogowa\u0107
 login.email=Email
-login.password=Password
-login.submit=Sign-In
-login.newAccount=New Account
+login.password=Has\u0142o
+login.submit=Zaloguj
+login.newAccount=Nowy u\u017Cytkownik
 
-register.message=Enter your details
-register.name=Name
-register.surname=Surname
+register.message=Prosz\u0119 wpisa\u0107 swoj\u0119 dane
+register.name=Imi\u0119
+register.surname=Nazwisko
 register.email=Email
-register.phoneNumber=Phone Number
-register.password=Password
-register.submit=Register
+register.phoneNumber=Numer telefonu
+register.password=Has\u0142o
+register.submit=Zarejestruj si\u0119
 
 users.email=Email
-users.name=Name
-users.surname=Surname
-users.phoneNumber=Phone Number
+users.name=Imi\u0119
+users.surname=Nazwisko
+users.phoneNumber=Numer telefonu
