--- a/appdev_project2/src/main/resources/messages_PL.properties
+++ b/appdev_project2/src/main/resources/messages_PL.properties
@@ -1,4 +1,4 @@
-header.home=Strona G\u0142ówna
+header.home=Strona G\u0142\u00F3wna
 header.jobAds=Og\u0142oszenia Pracy
 header.hello=Witaj
 header.logout=Wyloguj
@@ -20,14 +20,14 @@ job.owner=W\u0142a\u015Bciciel
 job.active=Aktywna
 
 doesnotexist.message=Nie istnieje
-doesnotexist.back=Powrót do strony g\u0142ównej
+doesnotexist.back=Powr\u00F3t do strony g\u0142\u00F3wnej
 
 bid.value=Cena \u20AC
 
-newbid.submit=Oferta
+newbid.submit=Wy\u015Blij
 newbid.valueError=Oferta zbyt wysoka lub < 0
 
-login.message=Prosz\u0119 si\u0119 zalogowa\u0107
+login.message=Logowanie
 login.email=Email
 login.password=Has\u0142o
 login.submit=Zaloguj
