second update to translations

--- a/appdev_project2/src/main/resources/messages_PL.properties
+++ b/appdev_project2/src/main/resources/messages_PL.properties
@@ -10,7 +10,7 @@ account.name=Imi\u0119
 account.phoneNumber=Numer telefonu
 account.job=Praca
 account.date=Data
-account.addJob=Dodaj now\u0105 prac\u0119
+account.addJob=Dodaj
 
 job.name=Nazwa
 job.description=Opis
