Added config, fixed missing user email in header, improved translation

--- a/appdev_project2/src/main/resources/messages_PL.properties
+++ b/appdev_project2/src/main/resources/messages_PL.properties
@@ -16,7 +16,8 @@ job.name=Nazwa
 job.description=Opis
 job.date=Data dodania
 job.view=Zobacz
-job.owner=W\u0142a\u015Bciciel
+job.ownerName=Imi\u0119 zleceniodawcy
+job.ownerEmail=Email zleceniodawcy
 job.active=Aktywna
 
 doesnotexist.message=Nie istnieje
@@ -33,7 +34,7 @@ login.password=Has\u0142o
 login.submit=Zaloguj
 login.newAccount=Nowy u\u017Cytkownik
 
-register.message=Prosz\u0119 wpisa\u0107 swoj\u0119 dane
+register.message=Wpisa\u0107 swoj\u0119 dane
 register.name=Imi\u0119
 register.surname=Nazwisko
 register.email=Email
@@ -45,3 +46,6 @@ users.email=Email
 users.name=Imi\u0119
 users.surname=Nazwisko
 users.phoneNumber=Numer telefonu
+
+lang.english=English
+lang.polish=Polski
