Added scheduler, added headings in job, added winning bid for closed job

--- a/appdev_project2/src/main/resources/messages.properties
+++ b/appdev_project2/src/main/resources/messages.properties
@@ -24,6 +24,8 @@ doesnotexist.message=Does not exist
 doesnotexist.back=Back to Home
 
 bid.value=Value \u20AC
+bid.allBids=All Bids
+bid.winner=Winning Bid
 
 newbid.submit=Bid
 newbid.valueError=Bid too high or < 0
