--- a/appdev_project2/src/main/resources/messages_PL.properties
+++ b/appdev_project2/src/main/resources/messages_PL.properties
@@ -24,6 +24,8 @@ doesnotexist.message=Nie istnieje
 doesnotexist.back=Powr\u00F3t do strony g\u0142\u00F3wnej
 
 bid.value=Cena \u20AC
+bid.allBids=Wszystkie Oferty
+bid.winner=Zwyci\u0119ska Oferta
 
 newbid.submit=Wy\u015Blij
 newbid.valueError=Oferta zbyt wysoka lub < 0
