--- a/appdev_project2/src/main/resources/messages.properties
+++ b/appdev_project2/src/main/resources/messages.properties
@@ -49,6 +49,8 @@ users.name=Name
 users.surname=Surname
 users.phoneNumber=Phone Number
 
+footer.language=Language
+
 lang.english=English
 lang.polish=Polski
 
