--- a/appdev_project2/src/main/resources/messages_EN.properties
+++ b/appdev_project2/src/main/resources/messages_EN.properties
@@ -3,7 +3,7 @@ header.jobAds=Job Advertisements
 header.hello=Hello
 header.logout=Log Out
 header.search=Search
-header.keyword=Job Name
+header.keyword=Type key word
 
 account.email=Email
 account.name=Name
@@ -48,6 +48,8 @@ users.email=Email
 users.name=Name
 users.surname=Surname
 users.phoneNumber=Phone Number
+
+footer.language=Language:
 
 lang.english=English
 lang.polish=Polski
