--- a/appdev_project2/src/main/resources/messages_PL.properties
+++ b/appdev_project2/src/main/resources/messages_PL.properties
@@ -3,7 +3,7 @@ header.jobAds=Og\u0142oszenia Pracy
 header.hello=Witaj
 header.logout=Wyloguj
 header.search=Szukaj
-header.keyword=Nazwa
+header.keyword=Wpisz s\u0142owo klucz
 
 account.email=Email
 account.name=Imi\u0119
@@ -48,6 +48,8 @@ users.email=Email
 users.name=Imi\u0119
 users.surname=Nazwisko
 users.phoneNumber=Numer telefonu
+
+footer.language=J\u0119zyk:
 
 lang.english=English
 lang.polish=Polski
